--- a/html/build.gradle
+++ b/html/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 apply plugin: "gwt"
 apply plugin: "war"
 apply plugin: "org.gretty"
-
+def outputPath = "build/dist/"
 gwt {
     gwtVersion = "$gwtFrameworkVersion" // Should match the version used for building the GWT backend. See gradle.properties.
     maxHeapSize = '1G' // Default 256m is not enough for the GWT compiler. GWT is HUNGRY.
@@ -83,10 +83,11 @@ task superDev(type: GwtSuperDev) {
 // This next line can be changed if you want to, for instance, always build into the
 // docs/ folder of a Git repo, which can be set to automatically publish on GitHub Pages.
 // This is relative to the html/ folder.
-var outputPath = "build/dist/"
+
 
 task dist(dependsOn: [clean, compileGwt]) {
     doLast {
+
         file(outputPath).mkdirs()
         copy {
             from("build/gwt/out") {
@@ -125,6 +126,7 @@ task addSource {
 }
 
 task distZip(type: Zip, dependsOn: dist) {
+
     //// This uses the output of the dist task, which removes the superdev buttons from index.html .
     from(outputPath)
     archiveBaseName.set("${appName}-dist")
