--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,5 +5,9 @@ dependencies {
     api "com.badlogicgames.gdx:gdx:$gdxVersion"
     api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
     api "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
-    api 'com.google.code.gson:gson:2.8.5'
+
+}
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-Xlint:unchecked'
+    options.deprecation = true
 }
